#!/usr/bin/env python3
"""
–°–∫—Ä–∏–ø—Ç –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏ —Ä–∞–±–æ—Ç—ã device tracking
–ó–∞–ø—É—Å–∫–∞—Ç—å –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ –≤ –∫–æ–Ω—Ç–µ–π–Ω–µ—Ä–µ marzneshin
"""
import asyncio
import sys
sys.path.insert(0, '/app')

from app import marznode
from app.db import GetDB
from app.db.models import UserDevice, UserDeviceIP
from sqlalchemy import func


async def check_marznode_data():
    """–ü—Ä–æ–≤–µ—Ä—è–µ–º, —á—Ç–æ –ø—Ä–∏—Ö–æ–¥–∏—Ç –æ—Ç marznode"""
    print("=" * 60)
    print("üîç –ü—Ä–æ–≤–µ—Ä–∫–∞ –¥–∞–Ω–Ω—ã—Ö –æ—Ç marznode")
    print("=" * 60)
    
    if not marznode.nodes:
        print("‚ùå –ù–µ—Ç –ø–æ–¥–∫–ª—é—á–µ–Ω–Ω—ã—Ö –Ω–æ–¥!")
        return
    
    for node_id, node in marznode.nodes.items():
        print(f"\nüì° Node ID: {node_id}")
        print(f"   –ê–¥—Ä–µ—Å: {node.address}")
        
        try:
            stats = await asyncio.wait_for(node.fetch_users_stats(), timeout=10)
            
            if not stats:
                print("   ‚ö†Ô∏è  –ù–µ—Ç —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏")
                continue
            
            print(f"   ‚úì –ü–æ–ª—É—á–µ–Ω–æ –∑–∞–ø–∏—Å–µ–π: {len(stats)}")
            
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–µ—Ä–≤—ã–µ 3 –∑–∞–ø–∏—Å–∏
            for i, stat in enumerate(list(stats)[:3]):
                print(f"\n   –ó–∞–ø–∏—Å—å #{i+1}:")
                print(f"      uid: {stat.uid}")
                print(f"      usage: {stat.usage}")
                print(f"      remote_ip: {getattr(stat, 'remote_ip', '‚ùå –ù–ï–¢')}")
                print(f"      uplink: {getattr(stat, 'uplink', '‚ùå –ù–ï–¢')}")
                print(f"      downlink: {getattr(stat, 'downlink', '‚ùå –ù–ï–¢')}")
                print(f"      client_name: {getattr(stat, 'client_name', '‚ùå –ù–ï–¢')}")
                print(f"      user_agent: {getattr(stat, 'user_agent', '‚ùå –ù–ï–¢')}")
            
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –µ—Å—Ç—å –ª–∏ —Ö–æ—Ç—è –±—ã –æ–¥–∏–Ω —Å remote_ip
            has_remote_ip = any(getattr(s, 'remote_ip', None) for s in stats)
            
            if has_remote_ip:
                print(f"\n   ‚úÖ Marznode –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç remote_ip!")
            else:
                print(f"\n   ‚ùå Marznode –ù–ï –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç remote_ip")
                print(f"   ‚Üí –ù—É–∂–Ω–æ –æ–±–Ω–æ–≤–∏—Ç—å marznode!")
                
        except asyncio.TimeoutError:
            print("   ‚ùå Timeout –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏")
        except Exception as e:
            print(f"   ‚ùå –û—à–∏–±–∫–∞: {e}")


def check_database():
    """–ü—Ä–æ–≤–µ—Ä—è–µ–º –±–∞–∑—É –¥–∞–Ω–Ω—ã—Ö"""
    print("\n" + "=" * 60)
    print("üíæ –ü—Ä–æ–≤–µ—Ä–∫–∞ –±–∞–∑—ã –¥–∞–Ω–Ω—ã—Ö")
    print("=" * 60)
    
    with GetDB() as db:
        # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ç–∞–±–ª–∏—Ü—ã
        from sqlalchemy import inspect
        inspector = inspect(db.bind)
        tables = inspector.get_table_names()
        
        print("\nüìä –¢–∞–±–ª–∏—Ü—ã device tracking:")
        for table in ['user_devices', 'user_device_ips', 'user_device_traffic']:
            exists = table in tables
            status = "‚úì" if exists else "‚ùå"
            print(f"   {status} {table}")
            
            if exists:
                if table == 'user_devices':
                    count = db.query(func.count(UserDevice.id)).scalar()
                    print(f"      –ó–∞–ø–∏—Å–µ–π: {count}")
                    
                    if count > 0:
                        # –ü–æ–∫–∞–∑—ã–≤–∞–µ–º –ø–æ—Å–ª–µ–¥–Ω–∏–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞
                        devices = db.query(UserDevice).order_by(UserDevice.last_seen_at.desc()).limit(5).all()
                        print("\n      –ü–æ—Å–ª–µ–¥–Ω–∏–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞:")
                        for d in devices:
                            print(f"        ‚Ä¢ Device ID {d.id}: user={d.user_id}, client={d.client_name or 'unknown'}, last_seen={d.last_seen_at}")
                
                elif table == 'user_device_ips':
                    count = db.query(func.count(UserDeviceIP.id)).scalar()
                    print(f"      –ó–∞–ø–∏—Å–µ–π: {count}")
                    
                    if count > 0:
                        ips = db.query(UserDeviceIP).order_by(UserDeviceIP.last_seen_at.desc()).limit(5).all()
                        print("\n      –ü–æ—Å–ª–µ–¥–Ω–∏–µ IP:")
                        for ip in ips:
                            print(f"        ‚Ä¢ {ip.ip}: device_id={ip.device_id}, connects={ip.connect_count}, last_seen={ip.last_seen_at}")


async def main():
    print("\nüîß Device Tracking Diagnostic Tool\n")
    
    # 1. –ü—Ä–æ–≤–µ—Ä—è–µ–º marznode
    await check_marznode_data()
    
    # 2. –ü—Ä–æ–≤–µ—Ä—è–µ–º –ë–î
    check_database()
    
    print("\n" + "=" * 60)
    print("üìã –ò—Ç–æ–≥–∏:")
    print("=" * 60)
    print("""
–ï—Å–ª–∏ marznode –ù–ï –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç remote_ip:
  ‚Üí Marznode –Ω—É–∂–Ω–æ –æ–±–Ω–æ–≤–∏—Ç—å!
  ‚Üí –û–±–Ω–æ–≤–ª–µ–Ω–Ω–∞—è –≤–µ—Ä—Å–∏—è protobuf –¥–æ–ª–∂–Ω–∞ –±—ã—Ç—å –≤ marznode
  ‚Üí Marznode –¥–æ–ª–∂–µ–Ω –ø–∞—Ä—Å–∏—Ç—å –ª–æ–≥–∏ –∏ –æ—Ç–ø—Ä–∞–≤–ª—è—Ç—å IP –∞–¥—Ä–µ—Å–∞

–ï—Å–ª–∏ –ë–î –ø—É—Å—Ç–∞—è, –Ω–æ marznode –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç –¥–∞–Ω–Ω—ã–µ:
  ‚Üí –ü—Ä–æ–≤–µ—Ä—å –ª–æ–≥–∏: docker compose logs marzneshin | grep -i device
  ‚Üí –í–æ–∑–º–æ–∂–Ω–æ –æ—à–∏–±–∫–∞ –≤ track_user_connection
""")
    print("=" * 60)


if __name__ == "__main__":
    asyncio.run(main())

