#!/usr/bin/env python3
"""
–ü—Ä–æ–≤–µ—Ä—è–µ–º –ß–¢–û –ò–ú–ï–ù–ù–û –ø—Ä–∏—Ö–æ–¥–∏—Ç –æ—Ç marznode
"""
import asyncio
import sys
import os
sys.path.insert(0, '/app')
os.environ.setdefault('SQLALCHEMY_SILENCE_UBER_WARNING', '1')

async def main():
    # –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∏—Ä—É–µ–º –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–µ —á—Ç–æ–±—ã –Ω–æ–¥—ã –ø–æ–¥–∫–ª—é—á–∏–ª–∏—Å—å
    from app.db import GetDB
    from app.db.models import Node
    
    print("\n" + "="*60)
    print("üîç –¢–ï–°–¢: –ß—Ç–æ –ø—Ä–∏—Ö–æ–¥–∏—Ç –æ—Ç marznode")
    print("="*60)
    
    # –ü–æ–ª—É—á–∞–µ–º –Ω–æ–¥—ã –∏–∑ –ë–î
    with GetDB() as db:
        nodes = db.query(Node).all()
        print(f"\nüìä –ù–æ–¥ –≤ –±–∞–∑–µ: {len(nodes)}")
        for n in nodes:
            print(f"  ‚Ä¢ Node {n.id}: {n.name} ({n.address}) - —Å—Ç–∞—Ç—É—Å: {n.status}")
    
    if not nodes:
        print("\n‚ùå –ù–æ–¥ –Ω–µ—Ç –≤ –±–∞–∑–µ!")
        return
    
    # –ü—ã—Ç–∞–µ–º—Å—è –ø–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è –∫ –Ω–æ–¥–µ –Ω–∞–ø—Ä—è–º—É—é
    print(f"\nüîå –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ –Ω–æ–¥–µ...")
    
    from app.marznode.grpcio import MarzNodeGRPCIO
    from app.marznode.grpclib import MarzNodeGRPCLIB
    
    for node in nodes:
        print(f"\n{'='*60}")
        print(f"–ù–æ–¥–∞: {node.name} ({node.address})")
        print(f"{'='*60}")
        
        try:
            # –ü—Ä–æ–±—É–µ–º grpcio
            print("\nüì° –ü—Ä–æ–±—É–µ–º –ø–æ–¥–∫–ª—é—á–∏—Ç—å—Å—è —á–µ—Ä–µ–∑ grpcio...")
            marznode = MarzNodeGRPCIO(
                address=node.address,
                port=node.port if hasattr(node, 'port') else 62050,
                api_port=node.api_port if hasattr(node, 'api_port') else 62051,
            )
            
            print("‚è≥ –ü–æ–ª—É—á–∞–µ–º —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫—É...")
            stats = await asyncio.wait_for(marznode.fetch_users_stats(), timeout=10)
            
            print(f"‚úÖ –ü–æ–ª—É—á–µ–Ω–æ –∑–∞–ø–∏—Å–µ–π: {len(stats)}")
            
            if not stats:
                print("‚ö†Ô∏è  –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ –ø—É—Å—Ç–∞—è")
                continue
            
            # –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–µ—Ä–≤—ã–µ 5 –∑–∞–ø–∏—Å–µ–π
            print(f"\nüìã –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–µ—Ä–≤—ã–µ {min(5, len(stats))} –∑–∞–ø–∏—Å–µ–π:\n")
            
            has_remote_ip = False
            
            for i, stat in enumerate(list(stats)[:5]):
                print(f"  –ó–∞–ø–∏—Å—å #{i+1}:")
                print(f"    uid:         {stat.uid}")
                print(f"    usage:       {stat.usage} bytes")
                
                # –ü—Ä–æ–≤–µ—Ä—è–µ–º –Ω–æ–≤—ã–µ –ø–æ–ª—è
                remote_ip = getattr(stat, 'remote_ip', None)
                uplink = getattr(stat, 'uplink', None)
                downlink = getattr(stat, 'downlink', None)
                client_name = getattr(stat, 'client_name', None)
                user_agent = getattr(stat, 'user_agent', None)
                
                print(f"    remote_ip:   {remote_ip if remote_ip else '‚ùå –ù–ï–¢'}")
                print(f"    uplink:      {uplink if uplink else '‚ùå –ù–ï–¢'}")
                print(f"    downlink:    {downlink if downlink else '‚ùå –ù–ï–¢'}")
                print(f"    client_name: {client_name if client_name else '‚ùå –ù–ï–¢'}")
                print(f"    user_agent:  {user_agent if user_agent else '‚ùå –ù–ï–¢'}")
                print()
                
                if remote_ip:
                    has_remote_ip = True
            
            # –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞
            total_with_ip = sum(1 for s in stats if getattr(s, 'remote_ip', None))
            
            print(f"\nüìä –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞:")
            print(f"  –í—Å–µ–≥–æ –∑–∞–ø–∏—Å–µ–π:      {len(stats)}")
            print(f"  –° remote_ip:        {total_with_ip}")
            print(f"  –ë–µ–∑ remote_ip:      {len(stats) - total_with_ip}")
            
            if has_remote_ip:
                print(f"\n‚úÖ –•–û–†–û–®–û: Marznode –û–¢–ü–†–ê–í–õ–Ø–ï–¢ remote_ip!")
                print(f"   ‚Üí Device tracking –¥–æ–ª–∂–µ–Ω —Ä–∞–±–æ—Ç–∞—Ç—å")
            else:
                print(f"\n‚ùå –ü–†–û–ë–õ–ï–ú–ê: Marznode –ù–ï –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç remote_ip")
                print(f"   ‚Üí –≠—Ç–æ –°–¢–ê–†–ê–Ø –≤–µ—Ä—Å–∏—è marznode")
                print(f"   ‚Üí –ù—É–∂–Ω–æ –æ–±–Ω–æ–≤–∏—Ç—å marznode —Å –Ω–æ–≤—ã–º protobuf")
            
        except asyncio.TimeoutError:
            print("‚ùå Timeout - –Ω–æ–¥–∞ –Ω–µ –æ—Ç–≤–µ—á–∞–µ—Ç")
        except Exception as e:
            print(f"‚ùå –û—à–∏–±–∫–∞: {type(e).__name__}: {e}")
    
    print("\n" + "="*60)
    print("üèÅ –í–´–í–û–î:")
    print("="*60)
    print("""
–ï—Å–ª–∏ –≤–∏–¥–∏—à—å "‚ùå –ù–ï–¢" —É remote_ip:
  ‚Üí –ü—Ä–æ–±–ª–µ–º–∞ –≤ MARZNODE (–Ω–µ –≤ marzneshin)
  ‚Üí Marznode –∏—Å–ø–æ–ª—å–∑—É–µ—Ç —Å—Ç–∞—Ä—ã–π protobuf –±–µ–∑ –Ω–æ–≤—ã—Ö –ø–æ–ª–µ–π
  ‚Üí –†–µ—à–µ–Ω–∏–µ: –æ–±–Ω–æ–≤–∏—Ç—å marznode

–ï—Å–ª–∏ –≤–∏–¥–∏—à—å IP –∞–¥—Ä–µ—Å–∞:
  ‚Üí Marznode —Ä–∞–±–æ—Ç–∞–µ—Ç –ø—Ä–∞–≤–∏–ª—å–Ω–æ
  ‚Üí –ü—Ä–æ–±–ª–µ–º–∞ –º–æ–∂–µ—Ç –±—ã—Ç—å –≤ –æ–±—Ä–∞–±–æ—Ç–∫–µ –Ω–∞ —Å—Ç–æ—Ä–æ–Ω–µ marzneshin
  ‚Üí –ù—É–∂–Ω–æ —Å–º–æ—Ç—Ä–µ—Ç—å –ª–æ–≥–∏ marzneshin
""")
    print("="*60)

if __name__ == "__main__":
    asyncio.run(main())

