#!/usr/bin/env python3
"""
HTTP –∫–ª–∏–µ–Ω—Ç –¥–ª—è Device History API

–ü—Ä–æ—Å—Ç–æ–π –∫–ª–∏–µ–Ω—Ç –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å REST API endpoint'–∞–º–∏ –∏—Å—Ç–æ—Ä–∏–∏ —É—Å—Ç—Ä–æ–π—Å—Ç–≤.

–ò—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏–µ:
    python device_api_client.py --help
    
    # –ü–æ–ª—É—á–∏—Ç—å —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
    python device_api_client.py user-devices --node-id 1 --user-id 123
    
    # –ü–æ–ª—É—á–∏—Ç—å –≤—Å–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞
    python device_api_client.py all-devices --node-id 1
    
    # –ü—Ä–æ–≤–µ—Ä–∏—Ç—å –º—É–ª—å—Ç–∏–ª–æ–≥–∏–Ω
    python device_api_client.py check-multilogin --node-id 1 --user-id 123 --max-devices 3
"""

import argparse
import json
import sys
from typing import Optional, Dict, List
from datetime import datetime

try:
    import requests
except ImportError:
    print("‚ùå –¢—Ä–µ–±—É–µ—Ç—Å—è –±–∏–±–ª–∏–æ—Ç–µ–∫–∞ requests. –£—Å—Ç–∞–Ω–æ–≤–∏—Ç–µ: pip install requests")
    sys.exit(1)


class DeviceAPIClient:
    """–ö–ª–∏–µ–Ω—Ç –¥–ª—è Device History API"""
    
    def __init__(self, base_url: str, token: str):
        """
        –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∫–ª–∏–µ–Ω—Ç–∞
        
        Args:
            base_url: –ë–∞–∑–æ–≤—ã–π URL –ø–∞–Ω–µ–ª–∏ (–Ω–∞–ø—Ä–∏–º–µ—Ä: https://panel.example.com)
            token: Bearer —Ç–æ–∫–µ–Ω –∞–¥–º–∏–Ω–∏—Å—Ç—Ä–∞—Ç–æ—Ä–∞
        """
        self.base_url = base_url.rstrip('/')
        self.headers = {
            'Authorization': f'Bearer {token}',
            'Content-Type': 'application/json'
        }
    
    def _format_bytes(self, bytes_value: int) -> str:
        """–§–æ—Ä–º–∞—Ç–∏—Ä–æ–≤–∞—Ç—å –±–∞–π—Ç—ã –≤ —á–∏—Ç–∞–µ–º—ã–π –≤–∏–¥"""
        for unit in ['B', 'KB', 'MB', 'GB', 'TB']:
            if bytes_value < 1024.0:
                return f"{bytes_value:.2f} {unit}"
            bytes_value /= 1024.0
        return f"{bytes_value:.2f} PB"
    
    def _format_timestamp(self, timestamp: int) -> str:
        """–§–æ—Ä–º–∞—Ç–∏—Ä–æ–≤–∞—Ç—å Unix timestamp"""
        return datetime.fromtimestamp(timestamp).strftime('%Y-%m-%d %H:%M:%S')
    
    def get_user_devices(
        self, 
        node_id: int, 
        user_id: int, 
        active_only: bool = False
    ) -> Dict:
        """
        –ü–æ–ª—É—á–∏—Ç—å —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞ –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
        
        Args:
            node_id: ID –Ω–æ–¥—ã
            user_id: ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
            active_only: –¢–æ–ª—å–∫–æ –∞–∫—Ç–∏–≤–Ω—ã–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞
            
        Returns:
            –°–ª–æ–≤–∞—Ä—å —Å –¥–∞–Ω–Ω—ã–º–∏ —É—Å—Ç—Ä–æ–π—Å—Ç–≤
        """
        url = f"{self.base_url}/api/nodes/{node_id}/devices/{user_id}"
        params = {'active_only': active_only}
        
        try:
            response = requests.get(url, headers=self.headers, params=params)
            response.raise_for_status()
            return response.json()
        except requests.exceptions.RequestException as e:
            print(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –∑–∞–ø—Ä–æ—Å–µ: {e}")
            if hasattr(e, 'response') and e.response is not None:
                print(f"   –°—Ç–∞—Ç—É—Å –∫–æ–¥: {e.response.status_code}")
                print(f"   –û—Ç–≤–µ—Ç: {e.response.text}")
            sys.exit(1)
    
    def get_all_devices(self, node_id: int) -> Dict:
        """
        –ü–æ–ª—É—á–∏—Ç—å –≤—Å–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞ —Å –Ω–æ–¥—ã
        
        Args:
            node_id: ID –Ω–æ–¥—ã
            
        Returns:
            –°–ª–æ–≤–∞—Ä—å —Å –¥–∞–Ω–Ω—ã–º–∏ –≤—Å–µ—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤
        """
        url = f"{self.base_url}/api/nodes/{node_id}/devices"
        
        try:
            response = requests.get(url, headers=self.headers)
            response.raise_for_status()
            return response.json()
        except requests.exceptions.RequestException as e:
            print(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –∑–∞–ø—Ä–æ—Å–µ: {e}")
            if hasattr(e, 'response') and e.response is not None:
                print(f"   –°—Ç–∞—Ç—É—Å –∫–æ–¥: {e.response.status_code}")
                print(f"   –û—Ç–≤–µ—Ç: {e.response.text}")
            sys.exit(1)
    
    def print_devices(self, data: Dict, show_inactive: bool = True):
        """
        –ö—Ä–∞—Å–∏–≤–æ –Ω–∞–ø–µ—á–∞—Ç–∞—Ç—å –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ–± —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞—Ö
        
        Args:
            data: –î–∞–Ω–Ω—ã–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤
            show_inactive: –ü–æ–∫–∞–∑—ã–≤–∞—Ç—å –Ω–µ–∞–∫—Ç–∏–≤–Ω—ã–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞
        """
        devices = data.get('devices', [])
        
        if not devices:
            print("   (–Ω–µ—Ç —É—Å—Ç—Ä–æ–π—Å—Ç–≤)")
            return
        
        print(f"\n‚úÖ –ù–∞–π–¥–µ–Ω–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {len(devices)}")
        print(f"   User ID: {data.get('uid')}\n")
        
        for idx, device in enumerate(devices, 1):
            if not show_inactive and not device.get('is_active'):
                continue
            
            print(f"   –£—Å—Ç—Ä–æ–π—Å—Ç–≤–æ #{idx}:")
            print(f"   ‚îú‚îÄ IP –∞–¥—Ä–µ—Å: {device['remote_ip']}")
            print(f"   ‚îú‚îÄ –ö–ª–∏–µ–Ω—Ç: {device['client_name']}")
            
            if device.get('user_agent'):
                print(f"   ‚îú‚îÄ User Agent: {device['user_agent']}")
            if device.get('protocol'):
                print(f"   ‚îú‚îÄ –ü—Ä–æ—Ç–æ–∫–æ–ª: {device['protocol']}")
            if device.get('tls_fingerprint'):
                print(f"   ‚îú‚îÄ TLS Fingerprint: {device['tls_fingerprint']}")
            
            print(f"   ‚îú‚îÄ –ü–µ—Ä–≤–æ–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ: {self._format_timestamp(device['first_seen'])}")
            print(f"   ‚îú‚îÄ –ü–æ—Å–ª–µ–¥–Ω–µ–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ: {self._format_timestamp(device['last_seen'])}")
            print(f"   ‚îú‚îÄ –ê–∫—Ç–∏–≤–Ω–æ: {'üü¢ –î–∞' if device['is_active'] else 'üî¥ –ù–µ—Ç'}")
            print(f"   ‚îú‚îÄ –û–±—â–∏–π —Ç—Ä–∞—Ñ–∏–∫: {self._format_bytes(device['total_usage'])}")
            print(f"   ‚îú‚îÄ ‚Üë –û—Ç–ø—Ä–∞–≤–ª–µ–Ω–æ: {self._format_bytes(device['uplink'])}")
            print(f"   ‚îî‚îÄ ‚Üì –ü–æ–ª—É—á–µ–Ω–æ: {self._format_bytes(device['downlink'])}\n")
    
    def print_all_devices(self, data: Dict, show_details: bool = False):
        """
        –ö—Ä–∞—Å–∏–≤–æ –Ω–∞–ø–µ—á–∞—Ç–∞—Ç—å –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ–±–æ –≤—Å–µ—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞—Ö
        
        Args:
            data: –î–∞–Ω–Ω—ã–µ –≤—Å–µ—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤
            show_details: –ü–æ–∫–∞–∑—ã–≤–∞—Ç—å –¥–µ—Ç–∞–ª—å–Ω—É—é –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é
        """
        users = data.get('users', [])
        
        total_devices = sum(len(user['devices']) for user in users)
        active_devices = sum(
            sum(1 for d in user['devices'] if d['is_active'])
            for user in users
        )
        
        print(f"\n‚úÖ –ù–∞–π–¥–µ–Ω–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π: {len(users)}")
        print(f"   –í—Å–µ–≥–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {total_devices}")
        print(f"   –ê–∫—Ç–∏–≤–Ω—ã—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {active_devices}\n")
        
        for user in users:
            if not user['devices']:
                continue
            
            active_count = sum(1 for d in user['devices'] if d['is_active'])
            
            print(f"   üë§ User {user['uid']}:")
            print(f"      –£—Å—Ç—Ä–æ–π—Å—Ç–≤: {len(user['devices'])} (–∞–∫—Ç–∏–≤–Ω—ã—Ö: {active_count})")
            
            if show_details:
                for device in user['devices']:
                    status = "üü¢" if device['is_active'] else "üî¥"
                    traffic = self._format_bytes(device['total_usage'])
                    print(f"      {status} {device['remote_ip']} ({device['client_name']}) - {traffic}")
            else:
                for device in user['devices']:
                    status = "üü¢" if device['is_active'] else "üî¥"
                    print(f"      {status} {device['remote_ip']} ({device['client_name']})")
            
            print()
    
    def check_multilogin(
        self, 
        node_id: int, 
        user_id: int, 
        max_devices: int = 3
    ) -> bool:
        """
        –ü—Ä–æ–≤–µ—Ä–∏—Ç—å –º—É–ª—å—Ç–∏–ª–æ–≥–∏–Ω –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
        
        Args:
            node_id: ID –Ω–æ–¥—ã
            user_id: ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
            max_devices: –ú–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤
            
        Returns:
            True –µ—Å–ª–∏ –Ω–∞—Ä—É—à–µ–Ω–∏–µ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–æ
        """
        data = self.get_user_devices(node_id, user_id, active_only=True)
        devices = data.get('devices', [])
        active_count = len(devices)
        
        print(f"\nüîç –ü—Ä–æ–≤–µ—Ä–∫–∞ –º—É–ª—å—Ç–∏–ª–æ–≥–∏–Ω–∞ –¥–ª—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è {user_id}")
        print(f"   –ê–∫—Ç–∏–≤–Ω—ã—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {active_count} / {max_devices}")
        
        if active_count > max_devices:
            print(f"\n   ‚ö†Ô∏è  –ù–ê–†–£–®–ï–ù–ò–ï: –ø—Ä–µ–≤—ã—à–µ–Ω –ª–∏–º–∏—Ç —É—Å—Ç—Ä–æ–π—Å—Ç–≤!")
            print(f"\n   –ê–∫—Ç–∏–≤–Ω—ã–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞:")
            for device in devices:
                print(f"   ‚Ä¢ {device['remote_ip']} ({device['client_name']})")
                print(f"     –ü–æ—Å–ª–µ–¥–Ω–µ–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ: {self._format_timestamp(device['last_seen'])}")
            return True
        else:
            print(f"\n   ‚úÖ –í –ø—Ä–µ–¥–µ–ª–∞—Ö –Ω–æ—Ä–º—ã")
            return False
    
    def analyze_traffic(self, node_id: int, user_id: int, top_n: int = 5):
        """
        –ê–Ω–∞–ª–∏–∑ —Ç—Ä–∞—Ñ–∏–∫–∞ –ø–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞–º
        
        Args:
            node_id: ID –Ω–æ–¥—ã
            user_id: ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
            top_n: –ö–æ–ª–∏—á–µ—Å—Ç–≤–æ —Ç–æ–ø —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –¥–ª—è –ø–æ–∫–∞–∑–∞
        """
        data = self.get_user_devices(node_id, user_id, active_only=False)
        devices = data.get('devices', [])
        
        if not devices:
            print("\n   (–Ω–µ—Ç –¥–∞–Ω–Ω—ã—Ö)")
            return
        
        # –°–æ—Ä—Ç–∏—Ä–æ–≤–∫–∞ –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É
        sorted_devices = sorted(
            devices,
            key=lambda d: d['total_usage'],
            reverse=True
        )
        
        total_traffic = sum(d['total_usage'] for d in sorted_devices)
        
        print(f"\nüìä –ê–Ω–∞–ª–∏–∑ —Ç—Ä–∞—Ñ–∏–∫–∞ –¥–ª—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è {user_id}")
        print(f"   –û–±—â–∏–π —Ç—Ä–∞—Ñ–∏–∫: {self._format_bytes(total_traffic)}")
        print(f"   –£—Å—Ç—Ä–æ–π—Å—Ç–≤: {len(sorted_devices)}\n")
        
        print(f"   –¢–û–ü-{top_n} —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É:\n")
        
        for idx, device in enumerate(sorted_devices[:top_n], 1):
            percentage = (device['total_usage'] / total_traffic * 100) if total_traffic > 0 else 0
            
            print(f"   {idx}. {device['remote_ip']} ({device['client_name']})")
            print(f"      –¢—Ä–∞—Ñ–∏–∫: {self._format_bytes(device['total_usage'])} ({percentage:.1f}%)")
            print(f"      ‚Üë {self._format_bytes(device['uplink'])} | ‚Üì {self._format_bytes(device['downlink'])}")
            print(f"      –ê–∫—Ç–∏–≤–Ω–æ: {'üü¢ –î–∞' if device['is_active'] else 'üî¥ –ù–µ—Ç'}\n")


def main():
    """–ì–ª–∞–≤–Ω–∞—è —Ñ—É–Ω–∫—Ü–∏—è"""
    parser = argparse.ArgumentParser(
        description='HTTP –∫–ª–∏–µ–Ω—Ç –¥–ª—è Device History API',
        formatter_class=argparse.RawDescriptionHelpFormatter,
        epilog="""
–ü—Ä–∏–º–µ—Ä—ã –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏—è:
  %(prog)s user-devices --node-id 1 --user-id 123
  %(prog)s user-devices --node-id 1 --user-id 123 --active-only
  %(prog)s all-devices --node-id 1
  %(prog)s all-devices --node-id 1 --details
  %(prog)s check-multilogin --node-id 1 --user-id 123 --max-devices 3
  %(prog)s analyze-traffic --node-id 1 --user-id 123
        """
    )
    
    parser.add_argument(
        '--url',
        default='http://localhost:8000',
        help='–ë–∞–∑–æ–≤—ã–π URL –ø–∞–Ω–µ–ª–∏ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: http://localhost:8000)'
    )
    
    parser.add_argument(
        '--token',
        required=True,
        help='Bearer —Ç–æ–∫–µ–Ω –∞–¥–º–∏–Ω–∏—Å—Ç—Ä–∞—Ç–æ—Ä–∞'
    )
    
    subparsers = parser.add_subparsers(dest='command', help='–ö–æ–º–∞–Ω–¥–∞')
    
    # –ö–æ–º–∞–Ω–¥–∞: user-devices
    parser_user = subparsers.add_parser(
        'user-devices',
        help='–ü–æ–ª—É—á–∏—Ç—å —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è'
    )
    parser_user.add_argument('--node-id', type=int, required=True, help='ID –Ω–æ–¥—ã')
    parser_user.add_argument('--user-id', type=int, required=True, help='ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è')
    parser_user.add_argument('--active-only', action='store_true', help='–¢–æ–ª—å–∫–æ –∞–∫—Ç–∏–≤–Ω—ã–µ')
    parser_user.add_argument('--json', action='store_true', help='–í—ã–≤–µ—Å—Ç–∏ –≤ JSON —Ñ–æ—Ä–º–∞—Ç–µ')
    
    # –ö–æ–º–∞–Ω–¥–∞: all-devices
    parser_all = subparsers.add_parser(
        'all-devices',
        help='–ü–æ–ª—É—á–∏—Ç—å –≤—Å–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞'
    )
    parser_all.add_argument('--node-id', type=int, required=True, help='ID –Ω–æ–¥—ã')
    parser_all.add_argument('--details', action='store_true', help='–ü–æ–∫–∞–∑–∞—Ç—å –¥–µ—Ç–∞–ª–∏')
    parser_all.add_argument('--json', action='store_true', help='–í—ã–≤–µ—Å—Ç–∏ –≤ JSON —Ñ–æ—Ä–º–∞—Ç–µ')
    
    # –ö–æ–º–∞–Ω–¥–∞: check-multilogin
    parser_check = subparsers.add_parser(
        'check-multilogin',
        help='–ü—Ä–æ–≤–µ—Ä–∏—Ç—å –º—É–ª—å—Ç–∏–ª–æ–≥–∏–Ω'
    )
    parser_check.add_argument('--node-id', type=int, required=True, help='ID –Ω–æ–¥—ã')
    parser_check.add_argument('--user-id', type=int, required=True, help='ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è')
    parser_check.add_argument('--max-devices', type=int, default=3, help='–ú–∞–∫—Å. —É—Å—Ç—Ä–æ–π—Å—Ç–≤')
    
    # –ö–æ–º–∞–Ω–¥–∞: analyze-traffic
    parser_analyze = subparsers.add_parser(
        'analyze-traffic',
        help='–ê–Ω–∞–ª–∏–∑ —Ç—Ä–∞—Ñ–∏–∫–∞'
    )
    parser_analyze.add_argument('--node-id', type=int, required=True, help='ID –Ω–æ–¥—ã')
    parser_analyze.add_argument('--user-id', type=int, required=True, help='ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è')
    parser_analyze.add_argument('--top', type=int, default=5, help='–¢–æ–ø N —É—Å—Ç—Ä–æ–π—Å—Ç–≤')
    
    args = parser.parse_args()
    
    if not args.command:
        parser.print_help()
        sys.exit(1)
    
    # –°–æ–∑–¥–∞—Ç—å –∫–ª–∏–µ–Ω—Ç
    client = DeviceAPIClient(args.url, args.token)
    
    # –í—ã–ø–æ–ª–Ω–∏—Ç—å –∫–æ–º–∞–Ω–¥—É
    if args.command == 'user-devices':
        data = client.get_user_devices(args.node_id, args.user_id, args.active_only)
        
        if args.json:
            print(json.dumps(data, indent=2, ensure_ascii=False))
        else:
            client.print_devices(data)
    
    elif args.command == 'all-devices':
        data = client.get_all_devices(args.node_id)
        
        if args.json:
            print(json.dumps(data, indent=2, ensure_ascii=False))
        else:
            client.print_all_devices(data, args.details)
    
    elif args.command == 'check-multilogin':
        violation = client.check_multilogin(
            args.node_id,
            args.user_id,
            args.max_devices
        )
        sys.exit(1 if violation else 0)
    
    elif args.command == 'analyze-traffic':
        client.analyze_traffic(args.node_id, args.user_id, args.top)


if __name__ == '__main__':
    try:
        main()
    except KeyboardInterrupt:
        print("\n\n‚ö†Ô∏è  –ü—Ä–µ—Ä–≤–∞–Ω–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–º")
        sys.exit(130)
    except Exception as e:
        print(f"\n\n‚ùå –û—à–∏–±–∫–∞: {e}")
        import traceback
        traceback.print_exc()
        sys.exit(1)

