#!/usr/bin/env python3
"""
–ü—Ä–∏–º–µ—Ä –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏—è Device History API

–≠—Ç–æ—Ç —Å–∫—Ä–∏–ø—Ç –¥–µ–º–æ–Ω—Å—Ç—Ä–∏—Ä—É–µ—Ç:
1. –ü–æ–ª—É—á–µ–Ω–∏–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
2. –ü–æ–ª—É—á–µ–Ω–∏–µ –≤—Å–µ—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤ —Å –Ω–æ–¥—ã
3. –ü—Ä–æ–≤–µ—Ä–∫—É –º—É–ª—å—Ç–∏–ª–æ–≥–∏–Ω–∞
4. –ê–Ω–∞–ª–∏–∑ —Ç—Ä–∞—Ñ–∏–∫–∞ –ø–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞–º
"""

import asyncio
import sys
from typing import Optional
from datetime import datetime

# –ü—Ä–µ–¥–ø–æ–ª–∞–≥–∞–µ—Ç—Å—è, —á—Ç–æ —Å–∫—Ä–∏–ø—Ç –∑–∞–ø—É—Å–∫–∞–µ—Ç—Å—è –∏–∑ –∫–æ—Ä–Ω—è –ø—Ä–æ–µ–∫—Ç–∞
sys.path.insert(0, '.')

from app import marznode
from app.config import MARZNODE_ADDRESS, MARZNODE_PORT


def format_bytes(bytes_value: int) -> str:
    """–§–æ—Ä–º–∞—Ç–∏—Ä–æ–≤–∞—Ç—å –±–∞–π—Ç—ã –≤ —á–∏—Ç–∞–µ–º—ã–π –≤–∏–¥"""
    for unit in ['B', 'KB', 'MB', 'GB', 'TB']:
        if bytes_value < 1024.0:
            return f"{bytes_value:.2f} {unit}"
        bytes_value /= 1024.0
    return f"{bytes_value:.2f} PB"


def format_timestamp(timestamp: int) -> str:
    """–§–æ—Ä–º–∞—Ç–∏—Ä–æ–≤–∞—Ç—å Unix timestamp"""
    return datetime.fromtimestamp(timestamp).strftime('%Y-%m-%d %H:%M:%S')


async def test_fetch_user_devices(node_id: int, user_id: int, active_only: bool = False):
    """
    –¢–µ—Å—Ç: –ø–æ–ª—É—á–∏—Ç—å —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞ –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
    """
    print(f"\n{'='*80}")
    print(f"üì± –ü–æ–ª—É—á–µ–Ω–∏–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è {user_id} —Å –Ω–æ–¥—ã {node_id}")
    print(f"   –¢–æ–ª—å–∫–æ –∞–∫—Ç–∏–≤–Ω—ã–µ: {active_only}")
    print(f"{'='*80}\n")
    
    node = marznode.nodes.get(node_id)
    if not node:
        print(f"‚ùå –ù–æ–¥–∞ {node_id} –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –∏–ª–∏ –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∞")
        return
    
    try:
        response = await node.fetch_user_devices(uid=user_id, active_only=active_only)
        
        print(f"‚úÖ –ù–∞–π–¥–µ–Ω–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {len(response.devices)}")
        print(f"   User ID: {response.uid}\n")
        
        if not response.devices:
            print("   (–Ω–µ—Ç —É—Å—Ç—Ä–æ–π—Å—Ç–≤)")
            return
        
        for idx, device in enumerate(response.devices, 1):
            print(f"   –£—Å—Ç—Ä–æ–π—Å—Ç–≤–æ #{idx}:")
            print(f"   ‚îú‚îÄ IP –∞–¥—Ä–µ—Å: {device.remote_ip}")
            print(f"   ‚îú‚îÄ –ö–ª–∏–µ–Ω—Ç: {device.client_name}")
            
            if device.user_agent:
                print(f"   ‚îú‚îÄ User Agent: {device.user_agent}")
            if device.protocol:
                print(f"   ‚îú‚îÄ –ü—Ä–æ—Ç–æ–∫–æ–ª: {device.protocol}")
            if device.tls_fingerprint:
                print(f"   ‚îú‚îÄ TLS Fingerprint: {device.tls_fingerprint}")
            
            print(f"   ‚îú‚îÄ –ü–µ—Ä–≤–æ–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ: {format_timestamp(device.first_seen)}")
            print(f"   ‚îú‚îÄ –ü–æ—Å–ª–µ–¥–Ω–µ–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ: {format_timestamp(device.last_seen)}")
            print(f"   ‚îú‚îÄ –ê–∫—Ç–∏–≤–Ω–æ: {'üü¢ –î–∞' if device.is_active else 'üî¥ –ù–µ—Ç'}")
            print(f"   ‚îú‚îÄ –û–±—â–∏–π —Ç—Ä–∞—Ñ–∏–∫: {format_bytes(device.total_usage)}")
            print(f"   ‚îú‚îÄ ‚Üë –û—Ç–ø—Ä–∞–≤–ª–µ–Ω–æ: {format_bytes(device.uplink)}")
            print(f"   ‚îî‚îÄ ‚Üì –ü–æ–ª—É—á–µ–Ω–æ: {format_bytes(device.downlink)}\n")
    
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {e}")


async def test_fetch_all_devices(node_id: int):
    """
    –¢–µ—Å—Ç: –ø–æ–ª—É—á–∏—Ç—å –≤—Å–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞ —Å –Ω–æ–¥—ã
    """
    print(f"\n{'='*80}")
    print(f"üì± –ü–æ–ª—É—á–µ–Ω–∏–µ –≤—Å–µ—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤ —Å –Ω–æ–¥—ã {node_id}")
    print(f"{'='*80}\n")
    
    node = marznode.nodes.get(node_id)
    if not node:
        print(f"‚ùå –ù–æ–¥–∞ {node_id} –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –∏–ª–∏ –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∞")
        return
    
    try:
        response = await node.fetch_all_devices()
        
        total_devices = sum(len(user.devices) for user in response.users)
        active_devices = sum(
            sum(1 for d in user.devices if d.is_active)
            for user in response.users
        )
        
        print(f"‚úÖ –ù–∞–π–¥–µ–Ω–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π: {len(response.users)}")
        print(f"   –í—Å–µ–≥–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {total_devices}")
        print(f"   –ê–∫—Ç–∏–≤–Ω—ã—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {active_devices}\n")
        
        for user_devices in response.users:
            if not user_devices.devices:
                continue
            
            active_count = sum(1 for d in user_devices.devices if d.is_active)
            
            print(f"   üë§ User {user_devices.uid}:")
            print(f"      –£—Å—Ç—Ä–æ–π—Å—Ç–≤: {len(user_devices.devices)} (–∞–∫—Ç–∏–≤–Ω—ã—Ö: {active_count})")
            
            for device in user_devices.devices:
                status = "üü¢" if device.is_active else "üî¥"
                print(f"      {status} {device.remote_ip} ({device.client_name})")
            
            print()
    
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {e}")


async def test_multilogin_check(node_id: int, user_id: int, max_devices: int = 3):
    """
    –¢–µ—Å—Ç: –ø—Ä–æ–≤–µ—Ä–∫–∞ –º—É–ª—å—Ç–∏–ª–æ–≥–∏–Ω–∞
    """
    print(f"\n{'='*80}")
    print(f"üîç –ü—Ä–æ–≤–µ—Ä–∫–∞ –º—É–ª—å—Ç–∏–ª–æ–≥–∏–Ω–∞ –¥–ª—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è {user_id}")
    print(f"   –ú–∞–∫—Å–∏–º—É–º —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {max_devices}")
    print(f"{'='*80}\n")
    
    node = marznode.nodes.get(node_id)
    if not node:
        print(f"‚ùå –ù–æ–¥–∞ {node_id} –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –∏–ª–∏ –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∞")
        return
    
    try:
        response = await node.fetch_user_devices(uid=user_id, active_only=True)
        
        active_count = len(response.devices)
        
        print(f"   –ê–∫—Ç–∏–≤–Ω—ã—Ö —É—Å—Ç—Ä–æ–π—Å—Ç–≤: {active_count} / {max_devices}")
        
        if active_count > max_devices:
            print(f"\n   ‚ö†Ô∏è  –ù–ê–†–£–®–ï–ù–ò–ï: –ø—Ä–µ–≤—ã—à–µ–Ω –ª–∏–º–∏—Ç —É—Å—Ç—Ä–æ–π—Å—Ç–≤!")
            print(f"\n   –ê–∫—Ç–∏–≤–Ω—ã–µ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞:")
            for device in response.devices:
                print(f"   ‚Ä¢ {device.remote_ip} ({device.client_name})")
                print(f"     –ü–æ—Å–ª–µ–¥–Ω–µ–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏–µ: {format_timestamp(device.last_seen)}")
        else:
            print(f"\n   ‚úÖ –í –ø—Ä–µ–¥–µ–ª–∞—Ö –Ω–æ—Ä–º—ã")
        
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –ø—Ä–æ–≤–µ—Ä–∫–µ: {e}")


async def test_traffic_analysis(node_id: int, user_id: int):
    """
    –¢–µ—Å—Ç: –∞–Ω–∞–ª–∏–∑ —Ç—Ä–∞—Ñ–∏–∫–∞ –ø–æ —É—Å—Ç—Ä–æ–π—Å—Ç–≤–∞–º
    """
    print(f"\n{'='*80}")
    print(f"üìä –ê–Ω–∞–ª–∏–∑ —Ç—Ä–∞—Ñ–∏–∫–∞ –¥–ª—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è {user_id}")
    print(f"{'='*80}\n")
    
    node = marznode.nodes.get(node_id)
    if not node:
        print(f"‚ùå –ù–æ–¥–∞ {node_id} –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –∏–ª–∏ –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∞")
        return
    
    try:
        response = await node.fetch_user_devices(uid=user_id, active_only=False)
        
        if not response.devices:
            print("   (–Ω–µ—Ç –¥–∞–Ω–Ω—ã—Ö)")
            return
        
        # –°–æ—Ä—Ç–∏—Ä–æ–≤–∫–∞ –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É
        sorted_devices = sorted(
            response.devices,
            key=lambda d: d.total_usage,
            reverse=True
        )
        
        total_traffic = sum(d.total_usage for d in sorted_devices)
        
        print(f"   –û–±—â–∏–π —Ç—Ä–∞—Ñ–∏–∫: {format_bytes(total_traffic)}")
        print(f"   –£—Å—Ç—Ä–æ–π—Å—Ç–≤: {len(sorted_devices)}\n")
        
        print("   –¢–û–ü-5 —É—Å—Ç—Ä–æ–π—Å—Ç–≤ –ø–æ —Ç—Ä–∞—Ñ–∏–∫—É:\n")
        
        for idx, device in enumerate(sorted_devices[:5], 1):
            percentage = (device.total_usage / total_traffic * 100) if total_traffic > 0 else 0
            
            print(f"   {idx}. {device.remote_ip} ({device.client_name})")
            print(f"      –¢—Ä–∞—Ñ–∏–∫: {format_bytes(device.total_usage)} ({percentage:.1f}%)")
            print(f"      ‚Üë {format_bytes(device.uplink)} | ‚Üì {format_bytes(device.downlink)}")
            print(f"      –ê–∫—Ç–∏–≤–Ω–æ: {'üü¢ –î–∞' if device.is_active else 'üî¥ –ù–µ—Ç'}\n")
    
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –∞–Ω–∞–ª–∏–∑–µ: {e}")


async def test_detect_anomalies(node_id: int, max_ips_per_user: int = 5):
    """
    –¢–µ—Å—Ç: –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏–µ –∞–Ω–æ–º–∞–ª–∏–π
    """
    print(f"\n{'='*80}")
    print(f"üîé –û–±–Ω–∞—Ä—É–∂–µ–Ω–∏–µ –∞–Ω–æ–º–∞–ª–∏–π –Ω–∞ –Ω–æ–¥–µ {node_id}")
    print(f"   –ú–∞–∫—Å–∏–º—É–º IP –Ω–∞ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è: {max_ips_per_user}")
    print(f"{'='*80}\n")
    
    node = marznode.nodes.get(node_id)
    if not node:
        print(f"‚ùå –ù–æ–¥–∞ {node_id} –Ω–µ –Ω–∞–π–¥–µ–Ω–∞ –∏–ª–∏ –Ω–µ –ø–æ–¥–∫–ª—é—á–µ–Ω–∞")
        return
    
    try:
        response = await node.fetch_all_devices()
        
        anomalies = []
        
        for user_devices in response.users:
            if not user_devices.devices:
                continue
            
            active_devices = [d for d in user_devices.devices if d.is_active]
            unique_ips = set(d.remote_ip for d in active_devices)
            
            if len(unique_ips) > max_ips_per_user:
                anomalies.append({
                    'uid': user_devices.uid,
                    'ip_count': len(unique_ips),
                    'ips': list(unique_ips)
                })
        
        if not anomalies:
            print("   ‚úÖ –ê–Ω–æ–º–∞–ª–∏–π –Ω–µ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–æ")
            return
        
        print(f"   ‚ö†Ô∏è  –ù–∞–π–¥–µ–Ω–æ –∞–Ω–æ–º–∞–ª–∏–π: {len(anomalies)}\n")
        
        for anomaly in anomalies:
            print(f"   User {anomaly['uid']}:")
            print(f"   ‚îî‚îÄ –ü–æ–¥–∫–ª—é—á–µ–Ω —Å {anomaly['ip_count']} —Ä–∞–∑–Ω—ã—Ö IP:")
            for ip in anomaly['ips']:
                print(f"      ‚Ä¢ {ip}")
            print()
    
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±–Ω–∞—Ä—É–∂–µ–Ω–∏–∏ –∞–Ω–æ–º–∞–ª–∏–π: {e}")


async def main():
    """
    –ì–ª–∞–≤–Ω–∞—è —Ñ—É–Ω–∫—Ü–∏—è
    """
    print("\n" + "="*80)
    print("üöÄ Device History API - –¢–µ—Å—Ç–æ–≤—ã–µ —Å—Ü–µ–Ω–∞—Ä–∏–∏")
    print("="*80)
    
    # –ü—Ä–æ–≤–µ—Ä–∫–∞ –¥–æ—Å—Ç—É–ø–Ω–æ—Å—Ç–∏ –Ω–æ–¥
    if not marznode.nodes:
        print("\n‚ùå –ù–æ–¥—ã –Ω–µ –Ω–∞–π–¥–µ–Ω—ã. –£–±–µ–¥–∏—Ç–µ—Å—å, —á—Ç–æ:")
        print("   1. Marzneshin –∑–∞–ø—É—â–µ–Ω")
        print("   2. –ù–æ–¥—ã –ø–æ–¥–∫–ª—é—á–µ–Ω—ã")
        print("   3. –í –±–∞–∑–µ –¥–∞–Ω–Ω—ã—Ö –µ—Å—Ç—å –Ω–∞—Å—Ç—Ä–æ–µ–Ω–Ω—ã–µ –Ω–æ–¥—ã\n")
        return
    
    print(f"\n‚úÖ –î–æ—Å—Ç—É–ø–Ω–æ –Ω–æ–¥: {len(marznode.nodes)}")
    for node_id in marznode.nodes.keys():
        print(f"   ‚Ä¢ –ù–æ–¥–∞ {node_id}")
    
    # –ü–∞—Ä–∞–º–µ—Ç—Ä—ã –¥–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è
    # –ò–∑–º–µ–Ω–∏—Ç–µ —ç—Ç–∏ –∑–Ω–∞—á–µ–Ω–∏—è –ø–æ–¥ –≤–∞—à—É –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é
    NODE_ID = 1  # ID –Ω–æ–¥—ã –¥–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è
    USER_ID = 1  # ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è –¥–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è
    
    # –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤
    await test_fetch_user_devices(NODE_ID, USER_ID, active_only=False)
    
    await test_fetch_user_devices(NODE_ID, USER_ID, active_only=True)
    
    await test_fetch_all_devices(NODE_ID)
    
    await test_multilogin_check(NODE_ID, USER_ID, max_devices=3)
    
    await test_traffic_analysis(NODE_ID, USER_ID)
    
    await test_detect_anomalies(NODE_ID, max_ips_per_user=5)
    
    print("\n" + "="*80)
    print("‚úÖ –í—Å–µ —Ç–µ—Å—Ç—ã –∑–∞–≤–µ—Ä—à–µ–Ω—ã")
    print("="*80 + "\n")


if __name__ == "__main__":
    # –ó–∞–ø—É—Å–∫ –∞—Å–∏–Ω—Ö—Ä–æ–Ω–Ω–æ–π –≥–ª–∞–≤–Ω–æ–π —Ñ—É–Ω–∫—Ü–∏–∏
    try:
        asyncio.run(main())
    except KeyboardInterrupt:
        print("\n\n‚ö†Ô∏è  –ü—Ä–µ—Ä–≤–∞–Ω–æ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–º")
    except Exception as e:
        print(f"\n\n‚ùå –ö—Ä–∏—Ç–∏—á–µ—Å–∫–∞—è –æ—à–∏–±–∫–∞: {e}")
        import traceback
        traceback.print_exc()

